# Geomosaic

./: .gitignore  CHANGELOG.md  README.md  Snakefile  Snakefile_kaiju  Snakefile_metaquast  Snakefile_metaspades  Snakefile_mifaser  Snakefile_trimgalore  Snakefile_trimmomatic  create_samples.py  create_snakefile.sh  dag_snakemake.sh  environment.yaml  execute_snakefile.sh  export_conda.sh  geomosaic.sh  geomosaic_env.yaml  gmpackages.json  gmpackages_dummy.json  modules_DAG.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  sphinx.yml
docs/: 02-introduction.md  03-install.md  Citation.md  _config.yml  faq.md  index.md  introduction.md  requirements.txt  suggestions.md  walkthrough.md
docs/_includes/: search_placeholder_custom.html
docs/_sass/color_schemes/: geomosaic.scss
docs/commands/: gather.md  index.md  prerun.md  setup.md  unit.md  workflow.md
docs/contributes/: extdb.md  index.md  inout.md  magspackage.md  modules.md  simplepackage.md
docs/source/: citation.md  conf.py  index.md  installation.md  introduction.md  lastupdates.md  modules.md  update.md
docs/source/commands/: gather.md  index.md  prerun.md  setup.md  unit.md  workflow.md
docs/source/contributes/: extdb.md  index.md  io.md  magspackage.md  simplepackage.md
docs/source/tips/: faq.md  specifictools.md  suggestions.md  toolcustomdb.md
docs/source/walkthrough/: summary.md  tutorial.md
modules/assembly/megahit/: Snakefile
modules/assembly/metaspades/: Snakefile
modules/assembly_qc/metaquast/: Snakefile
modules/assembly_qc_readmapping/bbmap/: Snakefile  Snakefile_target
modules/binning/maxbin2/: Snakefile  Snakefile_target
modules/binning/metabat2/: Snakefile
modules/binning_qa/checkm/: Snakefile
modules/func_classification_rb/metaphlan/: Snakefile
modules/func_classification_rb/mifaser/: Snakefile
modules/gene_coverage/pileup/: Snakefile  Snakefile_target
modules/m1/trimgalore/: Snakefile
modules/m1/trimmomatic/: Snakefile
modules/m2/megahit/: Snakefile  Snakefile_target
modules/m2/metaspades/: Snakefile  Snakefile_target
modules/m3/metaquast/: Snakefile  Snakefile_target
modules/m4/mifaser/: Snakefile  Snakefile_target
modules/m5/kaiju/: Snakefile  Snakefile_target
modules/pre_processing/fastp/: Snakefile  Snakefile_target
modules/pre_processing/trimgalore/: Snakefile  Snakefile_target
modules/tax_classification_rb/kaiju/: Snakefile
scripts/: parse_sample_table.py  user_choices.py
src/geomosaic/: _build_pipelines_module.py  _compose.py  _draw.py  _dummy_snakefile.py  _gnuparallel_templates.py  _slurm_templates.py  _utils.py  _validator.py  geo_infer.py  geo_setup.py  geo_unit.py  geo_workflow.py  geomosaic.py  glab.json  gm_compose.py  gm_envinstall.py  gm_gather.py  gm_prerun.py  gm_setup.py  gm_unit.py  gm_workflow.py  gmpackages.json  just_mags.json  parse_sample_table.py  pipeline.json  user_choices.py  validator.py
src/geomosaic/custom_tools/: argsoap_custom.py
src/geomosaic/envs/: argsoap.yaml  bakta.yaml  bbmap.yaml  bowtie2.yaml  checkm.yaml  coverm.yaml  das_tool.yaml  dram.yaml  eggnog_mapper.yaml  fastp.yaml  fastqc_readscount.yaml  funcprofiler.yaml  funprofiler.yaml  gtdbtk.yaml  kaiju.yaml  kofam_scan.yaml  kraken2.yaml  megahit.yaml  metaphlan.yaml  metaspades.yaml  mifaser.yaml  multi_binners.yaml  prodigal.yaml  quast.yaml  recognizer.yaml  trimgalore.yaml  trimmomatic.yaml
src/geomosaic/gathering/: gather_coverm_genome.py  gather_eggnog_mapper.py  gather_funcprofiler.py  gather_funprofiler.py  gather_hmms_search.py  gather_kaiju.py  gather_kraken2.py  gather_mags_dram.py  gather_mags_gtdbtk.py  gather_mags_hmmsearch.py  gather_mags_recognizer.py  gather_mifaser.py  gather_recognizer.py  utils.py
src/geomosaic/modules_extdb/: checkm.smk  kaiju.smk  mags_dram.smk  mags_gtdbtk.smk  recognizer.smk
src/geomosaic/parser/: rename_bins.py  (+4 more)
(+158 files in other folders)
